user manual: move up h2

--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
                 yoga, SCUBA diving, and hiking in the Pacific Northwest🧘🏻‍♀️🤿 🥾.
             </p>
         </div>
-        <img id="me" src="./img/me.jpeg">
+        <div class="image">
+            <img id="me" src="./img/me.jpeg">
+        </div>
     </div>
     <h2>My user manual</h2>
     <table>
